# ChatGPT_PWM

./: .gitignore  GOALS.md  README.md  SESSION_HISTORY.md  install.sh  pyproject.toml  requirements.txt
.github/workflows/: build.yml
chatgpt_pwm/: __init__.py  __main__.py  auth.py  billing.py  chat.py  cli.py  config.py  display.py  history.py  subscription.py
docs/superpowers/specs/: 2026-06-29-pwm-sso-login-design.md  2026-07-04-voice-barge-in-design.md  2026-07-08-memory-sources-design.md
tests/: test_smoke.py
web/: README.md  index.html  main.py  openai_subscription.py  pwm_billing.py
